--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "use-onclickoutside",
+  "name": "@pxlmvr/use-onclickoutside",
   "version": "0.1.0",
   "type": "module",
   "main": "dist/index.js",
